--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
                 Bhanix Finance
             </div>
 
-            <!-- --------X-------------X------------X-----------------X----------------X -->
+            <!----------X-------------X------------X-----------------X----------------X  -->
 
             <!-- QUIZ -->
             <!-- ===========-->
@@ -252,23 +252,23 @@
                 </div>
 
                 <!-- Fintech eco system questions -->
-                <div class="fintechQuestions" value="1" id="fintech_1" ng-click="jumpToQuestion($event)">
+                <div class="fintechQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" value="1" id="fintech_1" ng-click="jumpToQuestion($event)">
                     When to choose Buy Now Pay later?
                 </div>
 
-                <div class="fintechQuestions" value="2" id="fintech_2" ng-click="jumpToQuestion($event)">
+                <div class="fintechQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" value="2" id="fintech_2" ng-click="jumpToQuestion($event)">
                     Does Buy Now Pay Later charge interest?
                 </div>
 
-                <div class="fintechQuestions" id="fintech_3" value="3" ng-click="jumpToQuestion($event)">
+                <div class="fintechQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="fintech_3" value="3" ng-click="jumpToQuestion($event)">
                     Is early salary a mobile app or desktop app?
                 </div>
 
-                <div class="fintechQuestions" id="fintech_4" value="4" ng-click="jumpToQuestion($event)">
+                <div class="fintechQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="fintech_4" value="4" ng-click="jumpToQuestion($event)">
                     Traditional lending saves customer's time compared to digital lending?
                 </div>
 
-                <div class="fintechQuestions" id="fintech_5" value="5" ng-click="jumpToQuestion($event)">
+                <div class="fintechQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="fintech_5" value="5" ng-click="jumpToQuestion($event)">
                     Competition, collaboration and convergence makes healthy relationship between bank and NBFC
                 </div>
             </div>
@@ -282,23 +282,23 @@
                 </div>
 
                 <!-- CASHe questions -->
-                <div class="casheQuestions" id="cashe_6" value="11" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_6" value="11" ng-click="jumpToQuestion($event)">
                     Who is the founder of CASHe?
                 </div>
 
-                <div class="casheQuestions" id="cashe_7" value="12" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_7" value="12" ng-click="jumpToQuestion($event)">
                     What Is CASHe’s mission?
                 </div>
 
-                <div class="casheQuestions" id="cashe_8" value="13" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_8" value="13" ng-click="jumpToQuestion($event)">
                     What is the fundamental belief of CASHe?
                 </div>
 
-                <div class="casheQuestions" id="cashe_9" value="14" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_9" value="14" ng-click="jumpToQuestion($event)">
                     CASHe was founded in _______
                 </div>
 
-                <div class="casheQuestions" id="cashe_10" value="15" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_10" value="15" ng-click="jumpToQuestion($event)">
                     CASHe is a mobile app
                 </div>
             </div>
@@ -313,28 +313,56 @@
                 </div>
 
                 <!-- Bhanix Questions -->
-                <div class="bhanixQuestions" id="bhanix_11" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_11" value="5" ng-click="jumpToQuestion($event)">
                     Who is the founder of CASHe?
                 </div>
 
-                <div class="bhanixQuestions" id="bhanix_12" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_12" value="5" ng-click="jumpToQuestion($event)">
                     What is full form of NBFC?
                 </div>
 
-                <div class="bhanixQuestions" id="bhanix_13" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_13" value="5" ng-click="jumpToQuestion($event)">
                     NBFC's allow deposits from customers
                 </div>
 
-                <div class="bhanixQuestions" id="bhanix_14" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_14" value="5" ng-click="jumpToQuestion($event)">
                     Bhanix provides loan through
                 </div>
 
-                <div class="bhanixQuestions" id="bhanix_15" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_15" value="5" ng-click="jumpToQuestion($event)">
                     Fair practice code is meant for
                 </div>
             </div>
             <!-- --------X-------------X------------X-----------------X----------------X -->
 
+            			<!-- Competitive Analysis 
+                        =======================  -->
+            <div>
+                <div id="competitiveAnalysisQuiz" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" class="quiz-topics" ng-click="displayCompetitiveAnalysisQuizTips($event)">
+                Competitive Analysis
+                </div>
+
+                <div class="competitiveAnalysisQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="competitive_16" value="5" ng-click="jumpToQuestion($event)">
+                    How much is MoneyView's Maximum Loan Ticket Size
+                </div>
+
+                <div class="competitiveAnalysisQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="competitive_17" value="5" ng-click="jumpToQuestion($event)">
+                    Which of the following demographic are eligible to apply for a loan at MoneyView
+                </div>
+
+                <div class="competitiveAnalysisQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="competitive_18" value="5" ng-click="jumpToQuestion($event)">
+                    MoneyView is available in Gpay
+                </div>
+
+                <div class="competitiveAnalysisQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="competitive_19" value="5" ng-click="jumpToQuestion($event)">
+                    MoneyView Advantage Card offers an interest free period of up to
+                </div>
+
+                <div class="competitiveAnalysisQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="competitive_20" value="5" ng-click="jumpToQuestion($event)">
+                    PostPe card has a credit limit of upto
+                </div>
+            </div>
+            <!-- --------X-------------X------------X-----------------X----------------X ---- -->
         </div>
     
     
