website links functionality almost added

--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
             <!-- website Links -->
             <!-- ==================-->
 
-            <div class="left-nav-topics links-websites">
+            <!-- <div class="left-nav-topics links-websites">
                 LINKS
             </div>
 
@@ -234,7 +234,23 @@
 
             <div ng-click="changeBackground($event)" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix" class="links" onclick='displayInThePage(id)'>
                 Bhanix Finance
+            </div> -->
+
+            <!-- website Links -->
+            <!-- ==================-->
+
+            <div class="left-nav-topics links-websites">
+                LINKS
             </div>
+
+            <div ng-click="changeBackground($event);displayLinks($event)" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe" class="links">
+                CASHe
+            </div>
+
+            <div ng-click="changeBackground($event);displayLinks($event)" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix" class="links">
+                Bhanix Finance
+            </div>
+
 
             <!----------X-------------X------------X-----------------X----------------X  -->
 
