--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,10 @@
             <!-- --------X-------------X------------X-----------------X----------------X ---- -->
         </div>
     
-    
+        <div id="displayWebsiteLinks" align="center">
+            <h1 style="color:black">Please click on the below link to navigate to the official site</h1>
+            <h2><a ng-href="{{links}}">{{links}}</a></h2>
+        </div>
 
         <!-- ======================================================================= -->
 
