perfect functioning of the page

--- a/src/index.html
+++ b/src/index.html
@@ -382,8 +382,8 @@
         </div>
     
         <div id="displayWebsiteLinks" align="center">
-            <h1 style="color:black">Please click on the below link to navigate to the official site</h1>
-            <h2><a ng-href="{{links}}">{{links}}</a></h2>
+            <h2 style="color:black">Please click on the below link to navigate to the official site</h2>
+            <h3 style="color:black"><a ng-href="{{links}}">{{links}}</a></h3>
         </div>
 
         <!-- ======================================================================= -->
