quiz questions added correctly

--- a/index.html
+++ b/index.html
@@ -291,23 +291,23 @@
 
                 <!-- CASHe questions -->
                 <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_6" value="11" ng-click="jumpToQuestion($event)">
-                    Who is the founder of CASHe?
+                    What Is CASHe’s mission?
                 </div>
  
                 <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_7" value="12" ng-click="jumpToQuestion($event)">
-                    What Is CASHe’s mission?
-                </div>
-
-                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_8" value="13" ng-click="jumpToQuestion($event)">
                     What is the fundamental belief of CASHe?
                 </div>
 
-                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_9" value="14" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_8" value="13" ng-click="jumpToQuestion($event)">
                     CASHe was founded in _______
                 </div>
 
-                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_10" value="15" ng-click="jumpToQuestion($event)">
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_9" value="14" ng-click="jumpToQuestion($event)">
                     CASHe is a mobile app
+                </div>
+
+                <div class="casheQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="cashe_10" value="15" ng-click="jumpToQuestion($event)">
+                    Bhanix was established on?
                 </div>
             </div>
             <!-- --------X-------------X------------X-----------------X----------------X -->
@@ -322,23 +322,23 @@
 
                 <!-- Bhanix Questions -->
                 <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_11" value="5" ng-click="jumpToQuestion($event)">
-                    Who is the founder of CASHe?
-                </div>
-
-                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_12" value="5" ng-click="jumpToQuestion($event)">
                     What is full form of NBFC?
                 </div>
 
-                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_13" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_12" value="5" ng-click="jumpToQuestion($event)">
                     NBFC's allow deposits from customers
                 </div>
 
-                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_14" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_13" value="5" ng-click="jumpToQuestion($event)">
                     Bhanix provides loan through
                 </div>
 
-                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_15" value="5" ng-click="jumpToQuestion($event)">
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_14" value="5" ng-click="jumpToQuestion($event)">
                     Fair practice code is meant for
+                </div>
+
+                <div class="bhanixQuestions" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id="bhanix_15" value="5" ng-click="jumpToQuestion($event)">
+                    Who is the founder of CASHe?
                 </div>
             </div>
             <!-- --------X-------------X------------X-----------------X----------------X -->
