quiz is perfect

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             </a>
                         </div>
 
-                        <input id="fintech-submit-button" ng-show="currentQ==5" ng-click="submitFintechQuiz()"
+                        <input id="fintech-submit-button" ng-show="currentQ==5" ng-click="submitFintechQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
@@ -599,7 +599,7 @@
                             </a>
                         </div>
 
-                        <input id="fintech-submit-button" ng-show="currentQ==10" ng-click="submitCasheQuiz()"
+                        <input id="fintech-submit-button" ng-show="currentQ==10" ng-click="submitCasheQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
@@ -706,7 +706,7 @@
                             </a>
                         </div>
             
-                        <input id="fintech-submit-button" ng-show="currentQ==15" ng-click="submitBhanixQuiz()"
+                        <input id="fintech-submit-button" ng-show="currentQ==15" ng-click="submitBhanixQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
@@ -811,7 +811,7 @@
                             </a>
                         </div>
             
-                        <input id="fintech-submit-button" ng-show="currentQ==20" ng-click="submitCompetitiveAnalysisQuiz()"
+                        <input id="fintech-submit-button" ng-show="currentQ==20" ng-click="submitCompetitiveAnalysisQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
