links part functioning well

--- a/index.html
+++ b/index.html
@@ -372,11 +372,17 @@
             </div>
             <!-- --------X-------------X------------X-----------------X----------------X ---- -->
         </div>
-    
+
+     <!-- ======================================================================= -->
+
+     <!-- display website links -->
+     <!-- ------------------------ -->
+
         <div id="displayWebsiteLinks" align="center">
             <h2 style="color:black">Please click on the below link to navigate to the official site</h2>
-            <h3 style="color:black"><a ng-href="{{links}" id="link" onmouseover="changeOnHover()">{{links}}</a></h3>
+            <h3 style="color:black"><a ng-href="{{links}}" target="_blank" id="link" onmouseover="changeOnHover()">{{links}}</a></h3>
         </div>
+
 
         <!-- ======================================================================= -->
 
