buttons ids quizzes changed

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     <!-- Previous button -->
                     <!-- ==================-->
                     <div id="fintech-previous-button" ng-hide="currentQ==1" ng-click="currentQ=currentQ-1">
-                        <a href="#" class="prev" class="btn btn-info btn-lg">
+                        <a href="#" id="fintech-prev" class="btn btn-info btn-lg">
                             <div class="glyphicon glyphicon-circle-arrow-left"></div>Previous
                         </a>
                     </div>
@@ -558,7 +558,7 @@
                                     <!-- ==================-->
                 <div id="cashe-quiz-page">
                     <div id="cashe-previous-button" ng-hide="currentQ==6" ng-click="currentQ=currentQ-1">
-                        <a href="#" class="prev" class="btn btn-info btn-lg">
+                        <a href="#" id="cashe-prev" class="btn btn-info btn-lg">
                         <div class="glyphicon glyphicon-circle-arrow-left"></div> Previous
                         </a>
                     </div>  
@@ -661,7 +661,7 @@
                                 <!-- Previous button -->
                                 <!-- ==================-->
                     <div ng-hide="currentQ==11" ng-click="currentQ=currentQ-1">
-                        <a href="#" class="prev" class="btn btn-info btn-lg">
+                        <a href="#" id="bhanix-prev" class="btn btn-info btn-lg">
                             <div class="glyphicon glyphicon-circle-arrow-left"></div> <b>Previous</b>
                         </a>
                     </div>
@@ -767,7 +767,7 @@
                         <!-- Previous button -->
                         <!-- ==================-->
                     <div ng-hide="currentQ==16" ng-click="currentQ=currentQ-1">
-                        <a href="#" class="prev" class="btn btn-info btn-lg">
+                        <a href="#" id="competitive-analysis-prev" class="btn btn-info btn-lg">
                             <div class="glyphicon glyphicon-circle-arrow-left"></div> <b>Previous</b>
                         </a>
                     </div>
