--- a/index.html
+++ b/index.html
@@ -415,11 +415,8 @@
                         <p>Time limit : 5 minutes</p>
                     </div>
                     
-                    <!-- 
-                        
-                        original code
-                        <div id="fintechQuizStart" class="start-quiz" ng-click="startFintechQuiz()">
-                        <a href="#" class="prev" class="btn btn-info btn-lg">
+                    <!-- <div id="fintechQuizStart" class="start-quiz" ng-click="startFintechQuiz()">
+                        <a href="#" id="fintech-start" class="btn btn-info btn-lg">
                             <div class="glyphicon"></div> Start Quiz
                         </a>
                     </div> -->
@@ -429,6 +426,7 @@
                             <div class="glyphicon"></div> Start Quiz
                         </a>
                     </div>
+
 
                 </div>
 
