submit button ids done

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <!-- progress bar -->
                     <!-- =================-->
                     <center>
-                        <div ng-show="currentQ>0" id="progressBar" class="progress">
+                        <div ng-show="currentQ>0" id="fintech-progressBar" class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" ng-style="currentProgress">
                             </div>
@@ -612,7 +612,7 @@
                                             <!-- =================-->
 
                     <center>
-                        <div ng-show="currentQ>0" id="progressBar" class="progress">
+                        <div ng-show="currentQ>0" id="cashe-progressBar" class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" ng-style="currentProgress">
                             </div>
@@ -639,7 +639,7 @@
                             </a>
                         </div>
 
-                        <input id="fintech-submit-button" ng-show="currentQ==10" ng-click="submitCasheQuiz(false)"
+                        <input id="cashe-submit-button" ng-show="currentQ==10" ng-click="submitCasheQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
@@ -736,7 +736,7 @@
                                                 <!-- progress bar -->
                                                 <!-- =================-->
                     <center>
-                        <div id="progressBar" class="progress">
+                        <div id="bhanix-progressBar" class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" ng-style="currentProgress">
                             </div>
@@ -763,7 +763,7 @@
                             </a>
                         </div>
             
-                        <input id="fintech-submit-button" ng-show="currentQ==15" ng-click="submitBhanixQuiz(false)"
+                        <input id="bhanix-submit-button" ng-show="currentQ==15" ng-click="submitBhanixQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
@@ -858,7 +858,7 @@
                                         <!-- progress bar -->
                                         <!-- =================-->
                     <center>
-                        <div id="progressBar" class="progress">
+                        <div id="competitive-analysis-progressBar" class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" ng-style="currentProgress">
                             </div>
@@ -885,7 +885,7 @@
                             </a>
                         </div>
             
-                        <input id="fintech-submit-button" ng-show="currentQ==20" ng-click="submitCompetitiveAnalysisQuiz(false)"
+                        <input id="competitive-analysis-submit-button" ng-show="currentQ==20" ng-click="submitCompetitiveAnalysisQuiz(false)"
                             class="btn btn-primary" type="submit" value="Submit">
                         </input>
                     </div>
