working on quiz interruption

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     <!-- Documentation -->
                                     <!-- ===================-->
 
-            <div class="left-nav-topics documentation">
+            <div class="left-nav-topics documentation" >
                 DOCUMENTATION
             </div>
 
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div class="word-doc">
+            <div class="documents word-doc">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div class="left-nav-topics pdf-doc">
+            <div class="documents left-nav-topics pdf-doc">
                 PDF Documents
             </div>
 
@@ -383,8 +383,11 @@
             <h3 style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
         </div>
 
-
         <!-- ======================================================================= -->
+
+        <div id="displayBlankPage">
+            <h1 align="center">Please navigate through sub-accordions</h1>
+        </div>
 
         <!-- display videos, documentations, ppts, links and quiz -->
         <!-- =========================================================-->
