--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                         <!-- Video recordings -->
                                         <!-- ----------------- -->
 
-            <div id="vidRec" class="left-nav-topics vid">
+            <div id="vidRec" ng-click="changeBackground($event)" class="left-nav-topics vid">
                 VIDEO RECORDINGS <div class="align"></div>
             </div>
 
@@ -67,7 +67,7 @@
                                     <!-- Documentation -->
                                     <!-- ===================-->
 
-            <div class="left-nav-topics documentation" >
+            <div id='document' ng-click="changeBackground($event)" class="left-nav-topics documentation" >
                 DOCUMENTATION
             </div>
 
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div class="documents word-doc">
+            <div ng-click="changeBackground($event)" class="documents word-doc">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div class="documents left-nav-topics pdf-doc">
+            <div ng-click="changeBackground($event)" class="documents left-nav-topics pdf-doc">
                 PDF Documents
             </div>
 
@@ -209,7 +209,7 @@
             <!-- ppt documents -->
             <!-- =================-->
 
-            <div class="left-nav-topics ppt">
+            <div ng-click="changeBackground($event)" id='ppt-doc' class="left-nav-topics ppt">
                 PPT PRESENTATION
             </div>
 
@@ -230,7 +230,7 @@
             <!-- website Links -->
             <!-- ==================-->
 
-            <div class="left-nav-topics links-websites">
+            <div ng-click="changeBackground($event)" id='websites' class="left-nav-topics links-websites">
                 LINKS
             </div>
 
@@ -246,7 +246,7 @@
 
             <!-- QUIZ -->
             <!-- ===========-->
-            <div class="left-nav-topics" id="quiz">
+            <div ng-click="changeBackground($event)" class="left-nav-topics" id="quiz">
                 QUIZ
             </div>
 
