minor bugs working on it

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div ng-click="changeBackground($event)" class="documents word-doc">
+            <div ng-click="changeBackground($event)" id='word' class="documents word-doc">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div ng-click="changeBackground($event)" class="documents left-nav-topics pdf-doc">
+            <div ng-click="changeBackground($event)" id='pdf' class="documents left-nav-topics pdf-doc">
                 PDF Documents
             </div>
 
