--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         <!-- ======================================================================= -->
 
         <div id="displayBlankPage">
-            <h1 align="center">Please navigate through sub-accordions</h1>
+            <h1 class='navigateText' align="center">Please navigate through sub-accordions</h1>
         </div>
 
         <!-- display videos, documentations, ppts, links and quiz -->
