--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
      <!-- ------------------------ -->
 
         <div id="displayWebsiteLinks" align="center">
-            <h2 style="color:black">Please click on the below link to navigate to the official site</h2>
-            <h3 style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
+            <h2 class="navigateText" style="color:black">Please click on the below link to navigate to the official site</h2>
+            <h3 class="click-link" style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
         </div>
 
         <!-- ======================================================================= -->
