working on Priyanka's improvements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="videos" id="vid3" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" onclick="displayInThePage(id)">
-                    Pandaemic Fuels Tech Inclusion in the Financial Sector
+                    Pandemic Fuels Tech Inclusion in the Financial Sector
             </div>
 
             <div class="videos" id="vid4" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" onclick="displayInThePage(id)">
@@ -523,10 +523,10 @@
                 <!-- Display fintech quiz score -->
                 <!-- ================================-->
 
-                <div align="center" id="displayFintechQuizScore">
-                    <h1 id="fintechScoreText">Congratulations on completing Fintech Eco System Quiz !!</h1>
-                    <h1 id="score"></h1>
-                    <h1 id="feedback"></h1>
+                <div id="displayFintechQuizScore">
+                    <h1 class="scoreDetails" id="fintechScoreText">Congratulations on completing Fintech Eco System Quiz !!</h1>
+                    <h1 class="scoreDetails" id="score"></h1>
+                    <h1 class="scoreDetails" id="feedback"></h1>
                 </div>
 
                 <!-- -------X---------X--------X -------X---------X--------X----------- -->
@@ -653,9 +653,9 @@
                 <!-- Display CASHe quiz score -->
                 <!-- ================================-->
                 <div align="center" id="displayCasheQuizScore">
-                    <h1 id="fintechScoreText">Congratulations on completing CASHe Quiz !!</h1>
-                    <h1 id="cashe-quiz-score"></h1>
-                    <h1 id="cashe-quiz-feedback"></h1>
+                    <h1 class="scoreDetails" id="fintechScoreText">Congratulations on completing CASHe Quiz !!</h1>
+                    <h1 class="scoreDetails" id="cashe-quiz-score"></h1>
+                    <h1 class="scoreDetails" id="cashe-quiz-feedback"></h1>
                 </div>
 
                 <!-- -------X---------X--------X -------X---------X--------X----------- -->
@@ -776,9 +776,9 @@
                                     <!-- ================================-->
             
                 <div align="center" id="displayBhanixQuizScore">
-                    <h1>Congratulations on completing BHANIX Quiz !!</h1>
-                    <h1 id="bhanix-quiz-score"></h1>
-                    <h1 id="bhanix-quiz-feedback"></h1>
+                    <h1 class="scoreDetails">Congratulations on completing BHANIX Quiz !!</h1>
+                    <h1 class="scoreDetails" id="bhanix-quiz-score"></h1>
+                    <h1 class="scoreDetails" id="bhanix-quiz-feedback"></h1>
                 </div>
             </div>
 
@@ -898,9 +898,9 @@
                             <!-- ================================-->
     
                 <div align="center" id="displayCompetitiveAnalysisQuizScore">
-                    <h1>Congratulations on completing Competitive Analysis Quiz !!</h1>
-                    <h1 id="competitive-analysis-quiz-score"></h1>
-                    <h1 id="competitive-analysis-quiz-feedback"></h1>
+                    <h1 class="scoreDetails">Congratulations on completing Competitive Analysis Quiz !!</h1>
+                    <h1 class="scoreDetails" id="competitive-analysis-quiz-score"></h1>
+                    <h1 class="scoreDetails" id="competitive-analysis-quiz-feedback"></h1>
                 </div>
             </div>
         </div>
