--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <script src="js/angular.min.js"></script>
     </head>
 
-    <body ng-app="casheLearningsApp" ng-controller="quizController">
+    <body ng-app="casheLearningsApp" ng-controller="quizController" >
 
         <!-- ==========================================================================-->
 
-                            <!-- Welcome to CASHe learnings -->
-                            <!-- ---------------------------- -->
+        <!-- Welcome to CASHe learnings -->
+        <!-- ---------------------------- -->
 
         <h1 id='welcome-heading'>Welcome to CASHe learnings</h1>
 
@@ -28,16 +28,16 @@
 
         <div class="CASHe-topics-list">
 
-            <!-- -------------X-------------X-------------------X----------------X------- -->
+            <!-- ==========================================================================-->
                                         <!-- Video recordings -->
                                         <!-- ----------------- -->
 
-            <div id="vidRec" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" class="left-nav-topics vid">
+            <div id="vidRec" class="left-nav-topics vid">
                 VIDEO RECORDINGS <div class="align"></div>
             </div>
 
-                                <!-- sub accordions of videos -->
-                                <!-- -------------------------- -->
+            <!-- sub accordions of videos -->
+            <!-- -------------------------- -->
             <div class="videos" id="vid1" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" onclick="displayInThePage(id)">
                 Digital Transformation (Tech Panel)
             </div>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="videos" id="vid3" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" onclick="displayInThePage(id)">
-                    Pandemic Fuels Tech Inclusion in the Financial Sector
+                    Pandaemic Fuels Tech Inclusion in the Financial Sector
             </div>
 
             <div class="videos" id="vid4" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" onclick="displayInThePage(id)">
@@ -62,12 +62,12 @@
                     Is Buy Now Pay Later A Good Idea For Consumers?
             </div>
 
-            <!-- -------------X-------------X-------------------X----------------X------- -->
+            <!-- ==========================================================================-->
 
-                                    <!-- Documentation -->
-                                    <!-- ===================-->
+            <!-- Documentation -->
+            <!-- ===================-->
 
-            <div id='document' onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" class="left-nav-topics documentation" >
+            <div class="left-nav-topics documentation">
                 DOCUMENTATION
             </div>
 
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div ng-click="changeBackground($event)" onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" id='word' class="documents word-doc">
+            <div class="word-doc">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" id='pdf' class="documents left-nav-topics pdf-doc">
+            <div class="left-nav-topics pdf-doc">
                 PDF Documents
             </div>
 
@@ -209,7 +209,7 @@
             <!-- ppt documents -->
             <!-- =================-->
 
-            <div onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" id='ppt-doc' class="left-nav-topics ppt">
+            <div class="left-nav-topics ppt">
                 PPT PRESENTATION
             </div>
 
@@ -230,7 +230,7 @@
             <!-- website Links -->
             <!-- ==================-->
 
-            <div onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" id='websites' class="left-nav-topics links-websites">
+            <div class="left-nav-topics links-websites">
                 LINKS
             </div>
 
@@ -246,7 +246,7 @@
 
             <!-- QUIZ -->
             <!-- ===========-->
-            <div onmouseover="hoverApplied(id,'rgb(255,153,51)')" onmouseout="hoverLost(id,'rgb(64,64,64)')" ng-click="changeBackground($event)" class="left-nav-topics" id="quiz">
+            <div class="left-nav-topics" id="quiz">
                 QUIZ
             </div>
 
@@ -379,15 +379,12 @@
      <!-- ------------------------ -->
 
         <div id="displayWebsiteLinks" align="center">
-            <h2 class="navigateText" style="color:black">Please click on the below link to navigate to the official site</h2>
-            <h3 class="click-link" style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
+            <h2 style="color:black">Please click on the below link to navigate to the official site</h2>
+            <h3 style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
         </div>
+
 
         <!-- ======================================================================= -->
-
-        <div id="displayBlankPage">
-            <h1 class='navigateText' align="center">Please navigate through sub-accordions</h1>
-        </div>
 
         <!-- display videos, documentations, ppts, links and quiz -->
         <!-- =========================================================-->
@@ -523,10 +520,10 @@
                 <!-- Display fintech quiz score -->
                 <!-- ================================-->
 
-                <div id="displayFintechQuizScore">
-                    <h1 class="scoreDetails" id="fintechScoreText">Congratulations on completing Fintech Eco System Quiz !!</h1>
-                    <h1 class="scoreDetails" id="score"></h1>
-                    <h1 class="scoreDetails" id="feedback"></h1>
+                <div align="center" id="displayFintechQuizScore">
+                    <h1 id="fintechScoreText">Congratulations on completing Fintech Eco System Quiz !!</h1>
+                    <h1 id="score"></h1>
+                    <h1 id="feedback"></h1>
                 </div>
 
                 <!-- -------X---------X--------X -------X---------X--------X----------- -->
@@ -653,9 +650,9 @@
                 <!-- Display CASHe quiz score -->
                 <!-- ================================-->
                 <div align="center" id="displayCasheQuizScore">
-                    <h1 class="scoreDetails" id="fintechScoreText">Congratulations on completing CASHe Quiz !!</h1>
-                    <h1 class="scoreDetails" id="cashe-quiz-score"></h1>
-                    <h1 class="scoreDetails" id="cashe-quiz-feedback"></h1>
+                    <h1 id="fintechScoreText">Congratulations on completing CASHe Quiz !!</h1>
+                    <h1 id="cashe-quiz-score"></h1>
+                    <h1 id="cashe-quiz-feedback"></h1>
                 </div>
 
                 <!-- -------X---------X--------X -------X---------X--------X----------- -->
@@ -776,9 +773,9 @@
                                     <!-- ================================-->
             
                 <div align="center" id="displayBhanixQuizScore">
-                    <h1 class="scoreDetails">Congratulations on completing BHANIX Quiz !!</h1>
-                    <h1 class="scoreDetails" id="bhanix-quiz-score"></h1>
-                    <h1 class="scoreDetails" id="bhanix-quiz-feedback"></h1>
+                    <h1>Congratulations on completing BHANIX Quiz !!</h1>
+                    <h1 id="bhanix-quiz-score"></h1>
+                    <h1 id="bhanix-quiz-feedback"></h1>
                 </div>
             </div>
 
@@ -898,9 +895,9 @@
                             <!-- ================================-->
     
                 <div align="center" id="displayCompetitiveAnalysisQuizScore">
-                    <h1 class="scoreDetails">Congratulations on completing Competitive Analysis Quiz !!</h1>
-                    <h1 class="scoreDetails" id="competitive-analysis-quiz-score"></h1>
-                    <h1 class="scoreDetails" id="competitive-analysis-quiz-feedback"></h1>
+                    <h1>Congratulations on completing Competitive Analysis Quiz !!</h1>
+                    <h1 id="competitive-analysis-quiz-score"></h1>
+                    <h1 id="competitive-analysis-quiz-feedback"></h1>
                 </div>
             </div>
         </div>
@@ -909,6 +906,7 @@
         <link rel="stylesheet" href="css/quiz.css">
         <link rel="stylesheet" href="css/styles.less">
         <script src="js/casheLearnings.js"></script>
+        <script src="js/fintech-quiz.js"></script>
     </body>
 
 </html>
