display blank page code added

--- a/index.html
+++ b/index.html
@@ -383,8 +383,12 @@
             <h3 style="color:black"><a ng-href="{{links}}" target="_blank" id="link">{{links}}</a></h3>
         </div>
 
+    <!-- ======================================================================= -->
+    <div ng-show="displayNavigateTipPage==true" id="displayBlankPage">
+        <h1 class='navigateText' align="center">Please navigate through sub-accordions</h1>
+    </div>
 
-        <!-- ======================================================================= -->
+    <!-- ======================================================================= -->
 
         <!-- display videos, documentations, ppts, links and quiz -->
         <!-- =========================================================-->
