added displayHidePages() functionality added for code resuability

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <!-- Documentation -->
             <!-- ===================-->
 
-            <div class="left-nav-topics documentation">
+            <div class="left-nav-topics documentation" id="document" onclick="displayInThePage(id)">
                 DOCUMENTATION
             </div>
 
@@ -384,7 +384,7 @@
         </div>
 
     <!-- ======================================================================= -->
-    <div ng-show="displayNavigateTipPage==true" id="displayBlankPage">
+    <div id="displayBlankPage">
         <h1 class='navigateText' align="center">Please navigate through sub-accordions</h1>
     </div>
 
