some changes took place

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                         <!-- Video recordings -->
                                         <!-- ----------------- -->
 
-            <div id="vidRec" class="left-nav-topics vid">
+            <div id="vidRec" class="left-nav-topics vid" onclick="displayInThePage(id)">
                 VIDEO RECORDINGS <div class="align"></div>
             </div>
 
@@ -418,21 +418,12 @@
                         <p>Try to answer as many questions as possible</p><br />
                         <p>Time limit : 5 minutes</p>
                     </div>
-                
-
-                    <!-- <div id="fintechQuizStart" class="start-quiz" ng-click="startFintechQuiz()">
-                        <a href="#" id="fintech-start" class="btn btn-info btn-lg">
-                            <div class="glyphicon"></div> Start Quiz
-                        </a>
-                    </div> -->
 
                     <div id="fintechQuizStart" class="start-quiz" ng-click="startFintechQuiz()">
                         <a href="#" class="btn btn-info btn-lg start-quiz-button">
                             <div class="glyphicon"></div> Start Quiz
                         </a>
                     </div>
-
-
 
                 </div>
 
