done adding functionalities to the page. Page is running totally fine

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div class="word-doc">
+            <div class="word-doc documents">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div class="left-nav-topics pdf-doc">
+            <div class="left-nav-topics pdf-doc documents">
                 PDF Documents
             </div>
 
@@ -209,7 +209,7 @@
             <!-- ppt documents -->
             <!-- =================-->
 
-            <div class="left-nav-topics ppt">
+            <div class="left-nav-topics ppt" onclick='displayInThePage(id)'>
                 PPT PRESENTATION
             </div>
 
@@ -230,7 +230,7 @@
             <!-- website Links -->
             <!-- ==================-->
 
-            <div class="left-nav-topics links-websites">
+            <div class="left-nav-topics links-websites" onclick='displayInThePage(id)'>
                 LINKS
             </div>
 
@@ -246,7 +246,7 @@
 
             <!-- QUIZ -->
             <!-- ===========-->
-            <div class="left-nav-topics" id="quiz">
+            <div class="left-nav-topics" id="quiz" onclick='displayInThePage(id)'>
                 QUIZ
             </div>
 
@@ -394,7 +394,7 @@
         <!-- =========================================================-->
 
         <div id="displayDIV">
-            <object id="display" height="85%" width="85%" data="https://www.youtube.com/embed/Pl7XP8o7v6g"></object>
+            <object id="display" height="95%" width="95%" data="https://www.youtube.com/embed/Pl7XP8o7v6g"></object>
         </div>
 
         <!-- ======================================================================= -->
@@ -901,7 +901,7 @@
         <link rel="stylesheet" href="css/quiz.css">
         <link rel="stylesheet" href="css/styles.less">
         <script src="js/casheLearnings.js"></script>
-        <script src="js/fintech-quiz.js"></script>
+        <!-- <script src="js/fintech-quiz.js"></script> -->
     </body>
 
 </html>
