--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                         <!-- Video recordings -->
                                         <!-- ----------------- -->
 
-            <div id="vidRec" class="left-nav-topics vid" onclick="displayInThePage(id)">
+            <div id="vidRec" ng-click="changeBackground($event)" class="left-nav-topics vid" onclick="displayInThePage(id)">
                 VIDEO RECORDINGS <div class="align"></div>
             </div>
 
@@ -67,7 +67,7 @@
             <!-- Documentation -->
             <!-- ===================-->
 
-            <div class="left-nav-topics documentation" id="document" onclick="displayInThePage(id)">
+            <div ng-click="changeBackground($event)" class="left-nav-topics documentation" id="document" onclick="displayInThePage(id)">
                 DOCUMENTATION
             </div>
 
@@ -75,7 +75,7 @@
             <!-- Word Documents -->
             <!-- ===================-->
 
-            <div class="word-doc documents">
+            <div id='word' ng-click="changeBackground($event)" class="word-doc documents">
                 Word Documents
             </div>
 
@@ -188,7 +188,7 @@
             <!-- pdf documents  -->
             <!-- ==================-->
 
-            <div class="left-nav-topics pdf-doc documents">
+            <div id='pdf' ng-click="changeBackground($event)" class="left-nav-topics pdf-doc documents">
                 PDF Documents
             </div>
 
@@ -209,7 +209,7 @@
             <!-- ppt documents -->
             <!-- =================-->
 
-            <div class="left-nav-topics ppt" onclick='displayInThePage(id)'>
+            <div id='ppt-doc' ng-click="changeBackground($event)" class="left-nav-topics ppt" onclick='displayInThePage(id)'>
                 PPT PRESENTATION
             </div>
 
@@ -230,7 +230,7 @@
             <!-- website Links -->
             <!-- ==================-->
 
-            <div class="left-nav-topics links-websites" onclick='displayInThePage(id)'>
+            <div id='websites' ng-click="changeBackground($event)" class="left-nav-topics links-websites" onclick='displayInThePage(id)'>
                 LINKS
             </div>
 
@@ -246,7 +246,7 @@
 
             <!-- QUIZ -->
             <!-- ===========-->
-            <div class="left-nav-topics" id="quiz" onclick='displayInThePage(id)'>
+            <div ng-click="changeBackground($event)" class="left-nav-topics" id="quiz" onclick='displayInThePage(id)'>
                 QUIZ
             </div>
 
