some bugs are left off with quiz page auto submit

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 <!-- Display fintech quiz score -->
                 <!-- ================================-->
 
-                <div ng-show="displayFintechQuizScore == true" align="center" id="displayFintechQuizScore">
+                <div ng-show="displayFintechQuizScorePage == true" align="center" id="displayFintechQuizScore">
                     <h1 id="fintechScoreText">Congratulations on completing Fintech Eco System Quiz !!</h1>
                     <h1 id="score"></h1>
                     <h1 id="feedback"></h1>
