some changes done

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <!-- =========================================================-->
 
         <div ng-show="displayVideosDocsPage == true" id="displayDIV">
-            <object id="display" height="95%" width="95%" data="https://www.youtube.com/embed/Pl7XP8o7v6g?autoplay=0"></object>
+            <object id="display" height="95%" width="95%" data="https://www.youtube.com/embed/Pl7XP8o7v6g"></object>
         </div>
 
         <!-- ======================================================================= -->
