--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/casheLearnings.css">
         <script src="js/jquery-3.6.0.min.js"></script>
         <script src="js/angular.min.js"></script>
+        <link rel="shortcut icon" href="#">
     </head>
 
     <body ng-app="casheLearningsApp" ng-controller="quizController" >
